[gd_scene load_steps=8 format=3 uid="uid://h8i61u7scjja"]

[ext_resource type="Texture2D" uid="uid://diuold6p66vl7" path="res://ui/phone/Phone.png" id="1_ixggs"]
[ext_resource type="Script" path="res://ui/phone/phone.gd" id="1_rc8y6"]
[ext_resource type="Texture2D" uid="uid://v5linw1bcxot" path="res://ui/phone/PhoneScreen.png" id="2_pi01n"]
[ext_resource type="PackedScene" uid="uid://dfbuiik3genxv" path="res://ui/battle_hub/battle_hub.tscn" id="3_5yi8h"]
[ext_resource type="PackedScene" uid="uid://sb6dv6fa1fl" path="res://ui/phone/equipment_panel/equipment_panel.tscn" id="4_2i861"]
[ext_resource type="PackedScene" uid="uid://c40dpxftumv53" path="res://ui/phone/bottom_btns_panel/bottom_btns_panel.tscn" id="4_jce4i"]
[ext_resource type="PackedScene" uid="uid://cw5pp2865v2du" path="res://ui/phone/home_btn/home_btn.tscn" id="6_gq3b0"]

[node name="Phone" type="Node2D"]
script = ExtResource("1_rc8y6")

[node name="Phone" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(-15, 0)
texture = ExtResource("1_ixggs")

[node name="ScreenLight" type="Polygon2D" parent="."]
z_index = -5
position = Vector2(-15, 0)
color = Color(0.152941, 0.152941, 0.152941, 1)
polygon = PackedVector2Array(-366, -498, 394, -498, 394, 480, -366, 480)

[node name="ScreenUI" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -380.0
offset_top = -498.0
offset_right = 380.0
offset_bottom = 480.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenUI"]
layout_mode = 2
alignment = 2

[node name="BattleHub" parent="ScreenUI/VBoxContainer" instance=ExtResource("3_5yi8h")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="EquipmentPanel" parent="ScreenUI/VBoxContainer" instance=ExtResource("4_2i861")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SettingsPanel" type="MarginContainer" parent="ScreenUI/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenUI/VBoxContainer/SettingsPanel"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="ScreenUI/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Mute"

[node name="BottomBtnsPanel" parent="ScreenUI/VBoxContainer" instance=ExtResource("4_jce4i")]
unique_name_in_owner = true
layout_mode = 2

[node name="PhoneScreen" type="Sprite2D" parent="."]
z_index = 100
position = Vector2(-15, 0)
texture = ExtResource("2_pi01n")

[node name="HomeBtn" parent="." instance=ExtResource("6_gq3b0")]
unique_name_in_owner = true
offset_left = -75.0
offset_top = 510.0
offset_right = 75.0
offset_bottom = 560.0
